# QmlQCustomPlot

./: CMakeLists.txt  README.md  audio.qrc  audiowaveform.cpp  audiowaveform.h  main.cpp  spectrum.cpp  spectrum.h  timedomainplot.h
qquickitem/: audiowaveform.cpp  audiowaveform.h  qabstractplot.cpp  qabstractplot.h  spectrum.cpp  spectrum.h  spectrumplot.cpp  spectrumplot.h  timedomainplot.cpp  timedomainplot.h  waveformplot.cpp  waveformplot.h
resources/: audio.qrc  conf.qrc  other.qrc
resources/conf/: gradient.json
resources/qml/: main.qml
